<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pretty Good Music Player</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_artist_list">Artists</string>
    <string name="title_activity_album_list">Albums</string>
    <string name="title_activity_song_list">Songs</string>
    <string name="title_activity_now_playing">Now Playing</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="notification_title">Pretty Good Music Player</string>
    <string name="notification_message">Music Playing</string>
    <string name="ticker_text">Music Playback Service</string>
    <string name="next">Next</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="previous">Previous</string>
    <string name="resume">Resume</string>
    <string name="jumpback">Jump Back</string>
    <string name="shuffle">Shuffle</string>
    <string name="nothing_playing">Nothing Playing</string>
    <string name="search_hint">Search Music</string>
    <string name="exit">Exit</string>

    <!-- Home Page -->
    <string name="btn_browse">Browse All the Files</string>
    <string name="btn_search">Search Your Files</string>
    <string name="btn_playlist">View Your Playlist</string>
    <string name="btn_settings">Settings</string>

    <!-- *********** -->
    <!-- Preferences -->
    <!-- *********** -->

    <!-- File Preferences -->
    <string name="file_preferences_title">File Preferences</string>
    <string name="choose_music_directory_prompt">Choose Music Directory</string>
    <string name="choose_music_directory_summary">Pick the Directory Containing Your Artists</string>
    <string name="directorydialogprompt">Where are your artist folders?</string>
    <string name="directorydialoghere">Right Here!</string>
    <string name="directorydialogup">Go up a directory</string>

    <!-- Theme Preferences -->
    <string name="theme_title">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="style_preference_title">Style Preferences</string>
    <string name="theme_select_prompt">Pick the theme for the Music Player</string>
    <string name="accent_color_title">Accent Color</string>
    <string name="custom_accent_color_title">Custom Accent Color (aarrggbb)</string>
    <string name="text_size_title">Text Size</string>
    <string name="text_size_prompt">Pick the text size for the Music Player</string>
    <string name="full_screen_now_playing_title">Full Screen Now Playing</string>
    <string name="ignore_leading_the_title">Ignore Leading \'The\' in Artist Names</string>

    <!-- Playback Preferences -->
    <string name="playback_title">Playback</string>
    <string name="headphone_disconnect_behavior">Headphone Disconnect Behavior</string>
    <string name="pause_immediately">Pause Immediately</string>
    <string name="pause_after_one_sec">Pause After One Second</string>
    <string name="resume_on_quick_reconnect">Resume on Quick Reconnect</string>
    <string name="resume_on_reconnect">Resume on Reconnect</string>
    <string name="podcasts_and_audiobooks_title">Podcasts and Audiobooks</string>
    <string name="audiobook_mode">Audiobook Mode</string>

</resources>
