<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.smithdtyler.prettygoodmusicplayer.ArtistList" >
    <item
        android:id="@+id/action_now_playing"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_activity_now_playing"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/exit"/>
    <item
        android:id="@+id/menu_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:title="@string/search_hint" />
</menu>