<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smithdtyler.prettygoodmusicplayer.Homepage">

    <Button
        android:id="@+id/btn_browse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="75dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_style"
        android:text="Browse"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:contentDescription="@string/btn_browse"
        android:drawableLeft="@drawable/ic_folder_white_24px"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="75dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_style"
        android:text="Search"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:contentDescription="@string/btn_search"
        android:drawableLeft="@drawable/ic_action_search"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_browse" />

    <Button
        android:id="@+id/btn_playlists"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="75dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_style"
        android:text="Playlists"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:contentDescription="@string/btn_playlist"
        android:drawableLeft="@drawable/ic_playlist_play_white_24px"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_search" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="75dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_style"
        android:text="Settings"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:contentDescription="@string/btn_settings"
        android:drawableLeft="@drawable/ic_settings_white_24px"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_playlists" />

</android.support.constraint.ConstraintLayout>
